Delete .DS_Store and change link

--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@ h2 {
 
 /*------------------------------Extras------------------------------------*/
 .ideas {
-    background-image: url(wecreate-assets/img/fullbg.jpg);
+    background-image: url(https://github.com/PatrycjaKanigowska/We-create/blob/master/img/fullbg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center -7rem;
