--- a/style.css
+++ b/style.css
@@ -214,6 +214,7 @@ textarea {
 footer p {
     font-size: 1.4rem;
     padding-top: 2rem;
+    
 }
 
 form p:last-of-type {
@@ -234,6 +235,13 @@ h2 {
     text-align: center;
 }
 
+.copyrights {
+    clear: both;
+    position: absolute;
+    bottom: 2.5rem;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+}
 /*------------------------------Extras------------------------------------*/
 .ideas {
     background-image: url(img/fullbg.jpg);
