--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ html {
     //font-family: 'Montserrat', sans-serif;
     font-family: 'Roboto', sans-serif;
     font-size: 12px;
-    
 }
 
 body {
@@ -16,6 +15,7 @@ body {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
+    padding: 20px;
 }
 
 * {
@@ -68,7 +68,7 @@ h1, .tagline {
     padding-bottom: 30px;
 }
 
-.tagline, h1, li {
+.tagline, h1, li, h2, footer p {
     text-align: center;
 }
 
@@ -85,8 +85,103 @@ img {
     max-width: 100%;
 }
 
-section {
-    padding: 20px;
+
+h2, h3 {
+    font-family: 'Montserrat', sans-serif;
+    color: #5f1b98;
+    font-weight: 700;
+}
+
+h2 {
+    font-size: 48px;
+    line-height: 48px;
+}
+
+h3 {
+    font-size: 24px;
+}
+
+.first p {
+    line-height: 16px;
+}
+
+.btn {
+    font-size: 17px;
+    border: 2px solid #c244c2;
+    color: #420e73;
+    padding: 8px 16px;
+    background: none;
+    cursor: pointer;
+    display: block;
+    margin: 0 auto;
+}
+
+.btn1_1,
+.btn2_1,
+.btn3_1 {
+    display: none;
+}
+
+input, label, textarea {
+    display: block;
+}
+
+.btn4 {
+    border: 2px solid #fff;
+    padding: 8px 49px;
+}
+
+footer {
+    color: #450c75;
+    background-image: linear-gradient(
+    50deg,
+    #fe7fc4 30%,
+    #9729ee
+    );
+}
+
+input {
+    border-bottom: .2rem solid #440c74;
+    border-top: transparent;
+    border-left: transparent;
+    border-right: transparent;
+    color: #420e73;
+    padding-top: 1rem;
+    box-shadow: none;
+}
+
+input, textarea {
+    width: 100%;
+    background: none;
+}
+
+textarea {
+    border: .2rem solid #440c74;
+    resize: none;
+    margin-bottom: 15px;
+}
+
+h3,
+p,
+img, 
+h2 {
+    padding-bottom: 15px;
+}
+
+label {
+    padding-top: 15px;
+}
+
+label:last-of-type {
+    padding-bottom: 15px;
+}
+
+footer p {
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    font-size: 10px;
+    padding-top: 15px;
+    padding-bottom: 0;
 }
 
 /*
@@ -97,45 +192,5 @@ section {
     position: absolute;
 }
 */
-
-h3 {
-    font-family: 'Montserrat', sans-serif;
-    color: #5f1b98;
-    font-size: 24px;
-    font-weight: 700;
-}
-
-.first p {
-    line-height: 16px;
-}
-
-.btn1_1,
-.btn2_1,
-.btn3_1 {
-    display: none;
-}
-
-.btn {
-    font-size: 17px;
-    border: 2px solid #c244c2;
-    color: #420e73;
-    padding: 8px 16px;   
-}
-
-.btn1_2,
-.btn2_2,
-.btn3_2 {
-    display: block;
-    margin: 0 auto;
-}
-
-h3,
-p,
-img {
-    padding-bottom: 15px;
-}
-
-
-    
 
 
