--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,30 @@ footer p {
     label {
         font-size: 16px;
     }
-    
 }
+
+@media (min-width: 768px) {
+   
+    .first .container {
+        display: flex;
+        justify-content: space-around;
+    }
+    
+    .first .item-1 {
+        flex-basis: 50%;
+        
+    }
+    
+    .first .item-2 {
+        flex-basis: 40%;
+    }
+    
+    .first img {
+        margin-top: 30px;
+    }
+}   
+
+
+
 
 
