--- a/css/style.css
+++ b/css/style.css
@@ -59,8 +59,11 @@ h3,
 p,
 img, 
 h2 {
-    padding-top: 30px;
     padding-bottom: 15px;
+}
+
+h2 {
+    padding-top: 30px;
 }
 
 /* ------------------------------Fonts------------------------------------ */
@@ -263,7 +266,7 @@ footer p {
     .second img,
     .third img {
         width: 40%;
-        margin-bottom: 10px;
+        margin-bottom: 5px;
     }
     
     .first img,
