--- a/css/style.css
+++ b/css/style.css
@@ -295,13 +295,13 @@ footer form {
         font-size: 145px;
         line-height: 65px;
         font-weight: bold;
-        padding-top: 9vh;
+        padding-top: 30px;
     }
     
     .tagline {
         font-size: 28px;
         padding-top: 30px;
-        padding-bottom: 18vh;
+        padding-bottom: 100px;
     }
     
     h3 {
@@ -404,7 +404,7 @@ footer form {
     }
     
     .ideas h2 {
-        padding: 17vh 0;
+        padding: 160px 0;
     }
     
     .ideas {
@@ -516,6 +516,67 @@ footer form {
             ". . . . p p p p p p p p . f f f f f f f"
             ". . . . b b b b b b b b . f f f f f f f"
             ". . . . . . . . . . . . . f f f f f f f";
+    }
+}
+
+/* ------------------------1200px--------------------------------- */
+@media (min-width: 1200px) {
+    
+    h1 {
+        padding-top: 50px;
+    }
+    
+    .tagline {
+        padding-bottom: 140px;
+    }
+    
+    /* ---Pseudo elements--- */ 
+    header,
+    .ideas {
+        position: relative;
+    }
+    
+    header::before,
+    header::after,
+    .ideas::after {
+        position: absolute;
+    }
+    
+    header::before {
+        content: url(../img/wave-top2.svg);
+        width: 430px;
+        right: 0;
+        top: 280px;
+    }
+    
+    header::after {
+        content: url(../img/wave-top.svg);
+        width: 690px;
+        right: 0;
+        top: 395px;
+    }
+    
+    .ideas::after {
+        content: url(../img/wave-bottom.svg);
+        width: 750px;
+        left: -5px;
+        top: 340px;
+    }
+    
+    .first {
+        margin-top: 90px;
+    }
+    
+    section {
+        margin-bottom: 70px;
+    }
+    
+    .ideas {
+        margin-bottom: 90px;
+    }
+    
+    .third {
+        margin-bottom: 50px;
     }
 }
 
