--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,7 @@ input, textarea {
     color: #fff;
     padding: 10px;
     font-size: 16px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 textarea {
